fix: tweak gap for 2 cards

--- a/src/styles/ftva/_section-teaser-card.scss
+++ b/src/styles/ftva/_section-teaser-card.scss
@@ -4,10 +4,12 @@
     align-items: flex-start;
     overflow-y: auto;
     padding-top: 25px;
+    gap: var(--space-xl) 20px;
     scrollbar-color: $grey-blue $white;
     &:has(> :last-child:nth-child(3)) {
         /* if section has 3 elements */
         justify-content: space-between;
+        gap: var(--space-xl) 16px;
     }
 
     .card {
